# json-server

./: JSON格式参考.md  Postman集合.json  README.md  doctor_registration_examples.json  integrated_server.py  quick_doctor_test.py  quick_test.py  remote_test.py  server.py  stress_test.py  test_client.py  test_doctor_registration.py  test_fix_doctor_registration.py  test_report_20250903_180244.json  test_report_20250903_180350.json  test_report_20250903_180929.json  test_report_20250903_181350.json  test_report_20250903_181604.json  test_report_20250903_181810.json  test_report_20250903_181837.json  test_report_20250903_182038.json  test_report_20250903_182246.json  test_socket_delay.py  前端API文档.md  前端示例代码.html  医生注册问题修复报告.md  测试说明.md  答辩PPT大纲.md  答辩文档.md  答辩检查清单.md  答辩演示脚本.md  行业解决方案对环境和可持续发展影响分析报告 1120233506 谢宝玛.docx  项目开发总结报告-1120233506 谢宝玛.docx
MedicalSystem/MedicalSystem/: CMakeLists.txt  CMakeLists.txt.user.371776a  CMakeLists.txt.user.7ea826b  CMakeLists.txt.user.c134f5c  admissionstatuswindow.cpp  databasemanager.cpp  databasemanager.h  doctorinfowindow.cpp  doctormainwindow.cpp  doctormainwindow.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow_patient.cpp  mainwindow_patient.h  mainwindow_patient.ui  patientinfowindow.cpp  punchleavewindow.cpp  receptionwindow.cpp  registerwindow.cpp  registrationinfowindow.cpp  resetpasswordwindow.cpp  resources.qrc  sendandreceive.cpp  sendandreceive.h
MedicalSystem/MedicalSystem/.qtcreator/: project.json
MedicalSystem/MedicalSystem/chatSrc/: chatinitwindow.cpp  chatinitwindow.h  chatinitwindow.ui  chatmainwindow.cpp  chatmainwindow.h  chatmainwindow.ui  chatsysteminit.cpp  chatsysteminit.h  messageclient.cpp  messageclient.h
core/: __init__.py  medical_server.py
locallink/: CMakeLists.txt  client_副本.cpp  hello.json  qt_client.cpp
models/: __init__.py  database.py
network/: __init__.py  communication.py
services/: appointment_service.py  auth_service.py
utils/: server_manager.py
wangluo/: APPOINTMENT_GUIDE.md  README.md  UPDATE_INFO_GUIDE.md  check_database.py  database.md  debug_appointment.py  diagnose_server.py  execute_json.py  fix_and_test.py  integrated_server.py  integrated_server_loginmatchAdd.py  json-db-server.service  recv_json.py  send_json.py  server_control.sh  test_appointment.py  test_client.py  test_fixed_queries.py  test_insert_appointments.py  test_query_functions.py  test_simple_appointment.py  test_simple_update.py  test_sql_queries.py  test_update_info.py  verify_server_update.py
